add: se agrega estructura base de navbar, barra lateral y footer

--- a/index.html
+++ b/index.html
@@ -10,12 +10,26 @@
     
     <main>
         <!--Navbar-->
+        <nav>
+            <h1>Joyeria "Mi pequeña Tiana"</h1>
+        </nav>
 
         <!--aside-->
+        <aside>
+            <h2>Categorias</h2>
+            <ul>
+                <li>Item1</li>
+                <li>Item2</li>
+                <li>Item3</li>
+            </ul>
+        </aside>
 
         <!--contenido-->
 
         <!--footer-->
+        <footer>
+            <p>Joyería "Mi pequeña Tiana" todos los derechos reservados</p>
+        </footer>
 
 
 
