add: se agrega seccion galeria y se agrega css grid

--- a/index.html
+++ b/index.html
@@ -11,20 +11,61 @@
     <main>
         <!--Navbar-->
         <nav>
-            <h1>Joyeria "Mi pequeña Tiana"</h1>
+            <h3>Joyeria "Mi pequeña Tiana"</h3>
         </nav>
 
         <!--aside-->
         <aside>
-            <h2>Categorias</h2>
+            <h4>Accesorios</h4>
             <ul>
-                <li>Item1</li>
-                <li>Item2</li>
-                <li>Item3</li>
+                <li>Anillos (10)</li>
+                <li>Pulseras (12)</li>
+                <li>Aretes (20)</li>
+                <li>Colgantes (15)</li>
             </ul>
         </aside>
 
         <!--contenido-->
+        <section>
+
+            <div class="tarjeta">
+                <div class="img-tarjeta">
+                    <img src="./assets/img/collar_1.jpg" alt="collar_1">
+                </div>
+                <p>Cadena Ancla</p>
+                <p>Collar de cuero con medalla de ancha de Oro 18 quilates</p>
+                <p>Precio: $600</p>
+                <button>Comprar</button>
+            </div>
+            <div class="tarjeta">
+                <div class="img-tarjeta">
+                    <img src="./assets/img/collar_1.jpg" alt="collar_1">
+                </div>
+                <p>Cadena Ancla</p>
+                <p>Collar de cuero con medalla de ancha de Oro 18 quilates</p>
+                <p>Precio: $600</p>
+                <button>Comprar</button>
+            </div>
+            <div class="tarjeta">
+                <div class="img-tarjeta">
+                    <img src="./assets/img/collar_1.jpg" alt="collar_1">
+                </div>
+                <p>Cadena Ancla</p>
+                <p>Collar de cuero con medalla de ancha de Oro 18 quilates</p>
+                <p>Precio: $600</p>
+                <button>Comprar</button>
+            </div class="tarjeta">
+            <div>
+                <div class="img-tarjeta">
+                    <img src="./assets/img/collar_1.jpg" alt="collar_1">
+                </div>
+                <p>Cadena Ancla</p>
+                <p>Collar de cuero con medalla de ancha de Oro 18 quilates</p>
+                <p>Precio: $600</p>
+                <button>Comprar</button>
+            </div>
+
+        </section>
 
         <!--footer-->
         <footer>
