add: se agrega css en accesorios

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </nav>
 
         <!--aside-->
-        <aside>
+        <aside class="accesorios">
             <h4>Accesorios</h4>
             <ul>
                 <li>Anillos (10)</li>
@@ -26,7 +26,7 @@
         </aside>
 
         <!--contenido-->
-        <section>
+        <section class="galeria">
 
             <div class="tarjeta">
                 <div class="img-tarjeta">
