add: se agrega css grid en galeria

--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
                 <p>Collar de cuero con medalla de ancha de Oro 18 quilates</p>
                 <p>Precio: $600</p>
                 <button>Comprar</button>
-            </div class="tarjeta">
-            <div>
+            </div>
+            <div class="tarjeta">
                 <div class="img-tarjeta">
                     <img src="./assets/img/collar_1.jpg" alt="collar_1">
                 </div>
