fix: se arregla css grid

--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Ecommerce</title>
 </head>
+
 <body>
-    
+
     <main>
         <!--Navbar-->
         <nav>
@@ -32,38 +34,48 @@
                 <div class="img-tarjeta">
                     <img src="./assets/img/collar_1.jpg" alt="collar_1">
                 </div>
-                <p>Cadena Ancla</p>
-                <p>Collar de cuero con medalla de ancha de Oro 18 quilates</p>
-                <p>Precio: $600</p>
-                <button>Comprar</button>
+                    <div class="text-tarjeta">
+                        <h4>Cadena Ancla</h4>
+                        <p>Collar de cuero con medalla de ancha de Oro 18 quilates</p>
+                        <p>Precio: $600</p>
+                    </div>
+                    <button>Comprar</button>
             </div>
             <div class="tarjeta">
                 <div class="img-tarjeta">
                     <img src="./assets/img/collar_1.jpg" alt="collar_1">
                 </div>
-                <p>Cadena Ancla</p>
-                <p>Collar de cuero con medalla de ancha de Oro 18 quilates</p>
-                <p>Precio: $600</p>
-                <button>Comprar</button>
+                    <div class="text-tarjeta">
+                        <h4>Cadena Ancla</h4>
+                        <p>Collar de cuero con medalla de ancha de Oro 18 quilates</p>
+                        <p>Precio: $600</p>
+                    </div>
+                    <button>Comprar</button>
             </div>
             <div class="tarjeta">
                 <div class="img-tarjeta">
                     <img src="./assets/img/collar_1.jpg" alt="collar_1">
                 </div>
-                <p>Cadena Ancla</p>
-                <p>Collar de cuero con medalla de ancha de Oro 18 quilates</p>
-                <p>Precio: $600</p>
-                <button>Comprar</button>
+                    <div class="text-tarjeta">
+                        <h4>Cadena Ancla</h4>
+                        <p>Collar de cuero con medalla de ancha de Oro 18 quilates</p>
+                        <p>Precio: $600</p>
+                    </div>
+                    <button>Comprar</button>
             </div>
             <div class="tarjeta">
                 <div class="img-tarjeta">
                     <img src="./assets/img/collar_1.jpg" alt="collar_1">
                 </div>
-                <p>Cadena Ancla</p>
-                <p>Collar de cuero con medalla de ancha de Oro 18 quilates</p>
-                <p>Precio: $600</p>
-                <button>Comprar</button>
+                    <div class="text-tarjeta">
+                        <h4>Cadena Ancla</h4>
+                        <p>Collar de cuero con medalla de ancha de Oro 18 quilates</p>
+                        <p>Precio: $600</p>
+                    </div>
+                    <button>Comprar</button>
             </div>
+            
+
 
         </section>
 
@@ -82,4 +94,5 @@
     </main>
 
 </body>
+
 </html>
