add: se agrega css restante de la pag

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
         <aside class="accesorios">
             <h4>Accesorios</h4>
             <ul>
-                <li>Anillos (10)</li>
-                <li>Pulseras (12)</li>
-                <li>Aretes (20)</li>
-                <li>Colgantes (15)</li>
+                <li>Anillos <small>(10)</small></li>
+                <li>Pulseras <small>(12)</small></li>
+                <li>Aretes <small>(20)</small></li>
+                <li>Colgantes <small>(15)</small></li>
             </ul>
         </aside>
 
