fix: se arreglan imagenes y textos de los productos

--- a/index.html
+++ b/index.html
@@ -11,12 +11,10 @@
 <body>
 
     <main>
-        <!--Navbar-->
         <nav>
             <h3>Joyeria "Mi pequeña Tiana"</h3>
         </nav>
 
-        <!--aside-->
         <aside class="accesorios">
             <h4>Accesorios</h4>
             <ul>
@@ -27,7 +25,6 @@
             </ul>
         </aside>
 
-        <!--contenido-->
         <section class="galeria">
 
             <div class="tarjeta">
@@ -35,51 +32,48 @@
                     <img src="./assets/img/collar_1.jpg" alt="collar_1">
                 </div>
                     <div class="text-tarjeta">
-                        <h4>Cadena Ancla</h4>
-                        <p>Collar de cuero con medalla de ancha de Oro 18 quilates</p>
-                        <p>Precio: $600</p>
+                        <h4>Collar Ancla</h4>
+                        <p>Cadena de cuero con medalla de ancha de Oro 18 quilates</p>
+                        <p>Precio: $500</p>
                     </div>
                     <button>Comprar</button>
             </div>
             <div class="tarjeta">
                 <div class="img-tarjeta">
-                    <img src="./assets/img/collar_1.jpg" alt="collar_1">
+                    <img src="./assets/img/collar_2.jpg" alt="collar_2">
                 </div>
                     <div class="text-tarjeta">
-                        <h4>Cadena Ancla</h4>
-                        <p>Collar de cuero con medalla de ancha de Oro 18 quilates</p>
-                        <p>Precio: $600</p>
+                        <h4>Collar Bate</h4>
+                        <p>Cadena gruesa de 5mm, en baño de baño de plata y oro</p>
+                        <p>Precio: $650</p>
                     </div>
                     <button>Comprar</button>
             </div>
             <div class="tarjeta">
                 <div class="img-tarjeta">
-                    <img src="./assets/img/collar_1.jpg" alt="collar_1">
+                    <img src="./assets/img/collar_3.jpg" alt="collar_3">
                 </div>
                     <div class="text-tarjeta">
-                        <h4>Cadena Ancla</h4>
-                        <p>Collar de cuero con medalla de ancha de Oro 18 quilates</p>
-                        <p>Precio: $600</p>
+                        <h4>Collar Cadenas</h4>
+                        <p>Collar de cadenas de oro 18 quilates</p>
+                        <p>Precio: $700</p>
                     </div>
                     <button>Comprar</button>
             </div>
             <div class="tarjeta">
                 <div class="img-tarjeta">
-                    <img src="./assets/img/collar_1.jpg" alt="collar_1">
+                    <img src="./assets/img/collar_4.jpg" alt="collar_4">
                 </div>
                     <div class="text-tarjeta">
-                        <h4>Cadena Ancla</h4>
-                        <p>Collar de cuero con medalla de ancha de Oro 18 quilates</p>
-                        <p>Precio: $600</p>
+                        <h4>Collar de Perla</h4>
+                        <p>Cadena de plata gruesa con Swarovski con perla mediana</p>
+                        <p>Precio: $550</p>
                     </div>
                     <button>Comprar</button>
             </div>
             
-
-
         </section>
 
-        <!--footer-->
         <footer>
             <p>Joyería "Mi pequeña Tiana" todos los derechos reservados</p>
         </footer>
